Change in main function to read config.json file and update general in config.json

--- a/config.json
+++ b/config.json
@@ -1,4 +1,12 @@
 {
+    "general": {
+        "username": "789",
+        "password": "ahihi",
+        "mailServer": "127.0.0.1",
+        "smtp": 2225,
+        "pop3": 3335,
+        "autoload": 10
+    },
     "filters": [
         {
             "type": "from",
